--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
         <title></title>
     </head>
     <body>
+        <header>
+
+        </header>
+
+        <div class="jumbotron">
+
+        </div>
+        <main>
+
+        </main>
+        
+        <footer>
+
+        </footer>
 
     </body>
 </html>
