contenitori pagina principali con altezze e sfondo "debug"

--- a/index.html
+++ b/index.html
@@ -6,20 +6,30 @@
         <title></title>
     </head>
     <body>
-        <header>
+        <div class="container">
+            <header>
 
-        </header>
+            </header>
 
-        <div class="jumbotron">
+            <div class="jumbotron">
+
+            </div>
+
+            <main>
+                <div class="title columns">
+
+                </div>
+                <div class="row">
+
+                </div>
+
+            </main>
+
+            <footer>
+
+            </footer>
 
         </div>
-        <main>
-
-        </main>
-        
-        <footer>
-
-        </footer>
 
     </body>
 </html>
