--- a/index.html
+++ b/index.html
@@ -16,10 +16,20 @@
             </div>
 
             <main>
-                <div class="title columns">
+                <div class="title column">
 
                 </div>
                 <div class="row">
+
+                    <aside class="left column">
+
+                    </aside>
+                    <div class="middle column">
+
+                    </div>
+                    <aside class="right column">
+
+                    </aside>
 
                 </div>
 
