--- a/index.html
+++ b/index.html
@@ -6,40 +6,37 @@
         <title></title>
     </head>
     <body>
-        <div class="container">
-            <header>
+        <header class="margini">
 
-            </header>
+        </header>
 
-            <div class="jumbotron">
+        <div class="margini jumbotron">
+
+        </div>
+
+        <main class="margini">
+            <div class="title column">
+
+            </div>
+            <div class="row">
+
+                <aside class="left column">
+
+                </aside>
+                <div class="middle column">
+
+                </div>
+                <aside class="right column">
+
+                </aside>
 
             </div>
 
-            <main>
-                <div class="title column">
+        </main>
 
-                </div>
-                <div class="row">
+        <footer class="margini">
 
-                    <aside class="left column">
-
-                    </aside>
-                    <div class="middle column">
-
-                    </div>
-                    <aside class="right column">
-
-                    </aside>
-
-                </div>
-
-            </main>
-
-            <footer>
-
-            </footer>
-
-        </div>
+        </footer>
 
     </body>
 </html>
